--- a/style.css
+++ b/style.css
@@ -6,3 +6,19 @@
   max-height: 400px;
   overflow: auto;
 }
+
+table,th,td {
+  border: solid #195fd1;
+}
+
+input{
+  margin:2px;
+}
+
+form input[type=text], input[type=number]{
+  width:300px;
+}
+
+table th{
+  background-color: #195fd1;
+}
